<resources>
    <string name="app_name" description="Name of the Paco app used on the Home Screen and other places [No Translation]">Paco</string>
    <string name="server" description="default server address for Paco[No Translation]">www.pacoapp.com</string>
    <string name="app_package" description="unique Android package name[No Translation]">com.pacoapp.paco</string>
    <string name="contact_email" description="contact email address [No Translation]">paco-users@googlegroups.com</string>
    <string name="about_googlegroups" description="user group email address [No Translation]">paco-users@googlegroups.com</string>
    <string name="usergroup_website" description="Website for user group [No Translation]">https://groups.google.com/group/paco-users</string>
    <string name="about_support">Support:</string>
    <string name="about_weburl" description="Home page url [No Translation]">pacoapp.com</string>
    <string name="about_bob" description="[No Translation]">Bob Evans</string>
    <string name="about_alberto" description="[No Translation]">Alberto Savoia</string>
    <string name="about_arun" description="[No Translation]">Arun Saigal</string>
    <string name="about_cp" description="[No Translation]">CP Lim</string>
    <string name="about_stephen" description="[No Translation]">Stephen Uhler</string>
    <string name="about_tina" description="[No Translation]">Tina Malm</string>
    <string name="about_brian" description="[No Translation]">Brian Ong</string>
    <string name="about_kanwal" description="[No Translation]">Kanwal Safdar</string>
    <string name="about_team" description="Label for list of team members">Team:</string>
    <string name="about_version" description="Detail label for Paco version">Version:</string>
        <string name="welcome_about" description="button label to go to Paco version information">Paco Version</string>
    <string name="eula_title" description="Title in screen showing EULA">End User License Agreement</string>
    <string name="decline" description="Shown to user to decline the EULA">Decline</string>
    <string name="no" description="Dialog Button Label">No</string>
    <string name="yes" description="Dialog Button Label to agree with presented content">Yes</string>
    <string name="ok" description="Dialog Button Label to accept presented content">OK</string>
    <string name="success" description="Confirmation text usually shown in brief messages after user action completes.">Success</string>
    <string-array name="repeat_range" description="List selection choices for number of days between repeating schedules">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="days_of_week" description="Label for schedule edit for weekly schedule">Days of Week</string>
    <string-array name="nth_of_month" description="Ordinal numbers for which week of the month in schedule editing">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
    </string-array>
    <string name="explore_data" description="Label for menu item to see recorded data">Explore Data</string>
    <string name="current_account" description="Label for value of user's currently chosen Google Account">Current Account</string>
    <string name="experiment_refresh" description="Menu item to cause refresh of the definitions of running experiments from the server.">Experiment Refresh</string>
    <string name="checking_server_for_new_and_updated_experiment_definitions" description="Message about current work of app, namely checking for new and updated experiment definitions">Checking Server for New and Updated Experiment Definitions</string>
    <string name="selected_experiment_not_on_phone_refresh" description="Message shown to user trying to join an experiment that is not known to the phone but that might be on the server.">Selected Experiment does not exist on the phone. Refresh Experiments from Server?</string>
    <string name="link_wrong" description="Message shown to user trying to join experiment from a link in another app but it is not a Paco link">Make sure you are using the right link.</string>
    <string name="ongoing_duration" description="Label for a schedule that runs in perpetuity">ongoing</string>
    <string name="day_esm_period" description="List choice for schedule signal period - randomly every day">Day</string>
    <string name="week_esm_period" description="List choice for schedule signal period - randomly every week">Week</string>
    <string name="month_esm_period" description="List choice for schedule signal period - randomly very month">Month</string>
    <string name="daily_schedule_type" description="List choice for schedule that signals - fixed time every day">Daily</string>
    <string name="weekdays_schedule_type" description="List choice for schedule that signals - fixed time on weekdays">Weekdays</string>
    <string name="weekly_schedule_type" description="List choice for schedule that signals - fixed time every week">Weekly</string>
    <string name="monthly_schedule_type" description="List choice for schedule that signals - fixed time every month">Monthly</string>
    <string name="random_sampling_esm_schedule_type" description="List choice for schedule type  - random signaling (ESM=Experiential Sampling Method)">Random sampling (ESM)</string>
    <string name="self_report_only_schedule_type" description="List choice for schedule that does not signal. User initiates response.">Self report only</string>
    <string name="advanced_schedule_type" description="List choice for schedule that signals in custom, advanced ways">Advanced</string>
    <string name="survey_expired" description="Message to user that the signal to which they were responding has expired and there is no work to be done.">This survey request has expired. No need to enter a response</string>
    <string name="gps_message" description="Message to user to enable GPS location, but only when outside.">"Use GPS for improved location (outside only)? "</string>
    <string name="enable_button" description="Dialog Button label to enable GPS">Enable</string>
    <string name="cancel_button" description="Dialog Button label to cancel GPS">Cancel</string>
    <string name="need_location" description="Message to user about need to enable location services">"You must enable some form of Location Service if you want to include location data. "</string>
    <string name="required_answers_missing" description="Message shown to user submitting a form without filling in required fields.">Required Answers Missing</string>
    <string name="must_answer" description="Label for error dialog listing which fields are required">"Must answer: "</string>
    <string name="about_paco_menu_item" description="Menu Item text for About screens">About Paco</string>
    <string name="eula_menu_item" description="Menu Item to see user agreement text">User Agreement</string>
    <string name="debug_menu_item" description="Menu Item to debug app">Debug</string>
    <string name="select_signal_tone" description="Title of dialog box letting user select the Signaling Audio tone for Paco notifications">Select Signal Tone</string>
    <string name="refresh_experiment_menu_item" description="Menu item to refresh running experiments">Refresh Running Experiments</string>
    <string name="experiment_name" description="Default placeholder for Experiment name while loading real data">Experiment Name</string>
    <string name="data_handling_title" description="Title of Informed Consent Screen">You Agree to Share Information with the Experimenters</string>
    <string name="informed_consent_preamble" description="Text on infomrmed consent screen instruction to the participant to read the experimenter-provided data handling policy">By joining this experiment, you will be sharing your responses with the creator and administrators of this experiment, and they may use that information for research, product development, or other purposes.  Please read the privacy policy or data handling statement they have provided below to decide whether you want to participate in this experiment.</string>
    <string name="consent_checkbox_text" description="Label for button to consent to experiment's data policies.">"I consent"</string>
    <string name="daily_scheduled_time_for" description="Title for list of daily times in schedule edit screen">"Daily Scheduled Time for: "</string>
    <string name="by_day_of_month" description="List choice for monthly schedule type (choose by day of the month)">"          By Day of Month"</string>
    <string name="by_day_of_week" description="List choice for monthly schedule type (choose by day of the week)">          Day of Week"</string>
    <string name="day_of_month" description="Label for list picker of day of month (1..31)">Day of Month:</string>
    <string name="day_of_week" description="Label for widget to pick day of week (smtwrfs)">Day of Week:</string>
    <string name="action_find_experiments" decsription="Label for button to go to find experiments screen">Find Experiments</string>
    <string name="action_settings" description="Label for Menu/Toolbar action to go to Settings screen">Settings</string>
    <string name="action_language_preference" description="Label for Menu/Toolbar action to go to Language Preferences screen">Language Preference</string>
    <string name="action_troubleshooting" description="Label for Menu/Toolbar action to go to troubleshooting screen">Troubleshooting</string>
    <string name="action_user_guide" description="Label for Menu/Toolbar action to go to User Guide screen">User Guide</string>
    <string name="action_email_paco_team"  description="Label for Menu/Toolbar action to go email Paco team">Email Paco Team</string>
    <string name="action_about" description="Label for Menu/Toolbar action to go to About screen">About Paco</string>
    <string name="action_user_agreement" description="Label for Menu/Toolbar action to go to User Agreement screen">User Agreement</string>
    <string name="action_open_source_libs" description="Label for Menu/Toolbar action to go to Open source libraries screen">Open source libraries</string>
    <string name="done_joining_button" description="Label for button to complete the experiment join process">Done</string>
    <string name="send_diagnostics_report_button_label">Email Report</string>
    <string name="force_upload_events_button_label">Sync Events</string>
    <string name="check_setup_button_label">Test</string>
    <string name="title_troubleshooting">Troubleshooting</string>
    <string name="title_results">Results</string>
    <string name="review_accessibility_button_label">Make sure Paco has accessibility permissions by clicking here</string>
    <string name="review_usageaccess_button_label">Make sure Paco has app usage access by clicking here</string>
    <string name="review_schedule_button_label">Review Schedule</string>
    <string name="the_personal_analytics_companion_subtitle">The Personal Analytics COmpanion</string>
    <string name="login_with_your_google_email_to_join_experiments_message">Login with your Google email to join experiments</string>
    <string name="login_button_label">Login</string>
</resources>