<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_preferences"
        android:title="@string/action_language_preference"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_troubleshooting"
        android:title="@string/action_troubleshooting"
        android:orderInCategory="100"
        app:showAsAction="never" />
    
    <item android:id="@+id/action_user_guide"
        android:title="@string/action_user_guide"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_email_paco_team"
        android:title="@string/action_email_paco_team"
        android:orderInCategory="100"
        app:showAsAction="never" />
     <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
