<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_troubleshooting"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/checkSetupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_setup_button_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/sendPacoLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_diagnostics_report_button_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/forceSyncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_upload_events_button_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_results"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
</LinearLayout>
        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#fafafa" >

            <TextView
                android:id="@+id/resultsTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dip"
                android:paddingLeft="8dip"
                android:paddingTop="4dip"
                android:text=""
                android:textSize="20dip" >
            </TextView>
        </ScrollView>
    

</LinearLayout>