<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="@color/purple_background"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/sync_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Paco"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/the_personal_analytics_companion_subtitle"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#ffffff"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paco128" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_with_your_google_email_to_join_experiments_message" 
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_button_label" 
        android:textColor="#000000"/>

</LinearLayout>
