<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright 2011 Google Inc. All Rights Reserved.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance  with the License.  
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="fill_parent" >
	<TextView android:textSize="15dip" android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
    android:text="@string/data_handling_title" android:textColor="#000000" android:textStyle="bold"></TextView>
	<TextView android:textSize="15dip" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content"
      android:text="@string/informed_consent_preamble" android:textColor="#000000" android:fadingEdge="horizontal"></TextView>
	<ScrollView android:id="@+id/ScrollView01"
	android:layout_height="0dip" android:layout_weight="1"	
    
    android:layout_width="wrap_content" android:background="#fafafa">
		<TextView android:text=""
		android:textSize="20dip"
	android:id="@+id/InformedConsentTextView" android:layout_width="wrap_content"
	android:layout_height="wrap_content"></TextView>
	</ScrollView>
	<CheckBox android:id="@+id/InformedConsentAgreementCheckBox" 
		android:layout_gravity="center" 
		android:layout_height="65dip"
		android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:text="@string/consent_checkbox_text"></CheckBox>
</LinearLayout>
