<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright 2011 Google Inc. All Rights Reserved.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance  with the License.  
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dip" 
                        android:paddingLeft="8dip"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            >
        </TextView>
    </ScrollView>

    <!-- Provide the user with a direct link to the accessibility preferences, so he/she can enable
    the accessibility preference for Paco -->
    <Button
        android:id="@+id/openAccessibilitySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dip"
        android:text="@string/review_accessibility_button_label"
        android:visibility="gone"
        android:paddingLeft="8dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        >
    </Button>

    <!-- Provide the user with a direct link to the app usage access settings, so he/she can enable
    app usage access for Paco -->
    <Button
        android:id="@+id/openUsageAccessSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dip"
        android:text="@string/review_usageaccess_button_label"
        android:visibility="gone"
        android:paddingLeft="8dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        >
    </Button>

    <Button
        android:id="@+id/reviewSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dip"
        android:text="@string/review_schedule_button_label" 
        android:visibility="gone"
                    android:paddingLeft="8dip"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
        >        
    </Button> 
    
    
    <Button
        android:id="@+id/instructionsCloseButton"
        android:layout_width="fill_parent"
        android:layout_height="65dip"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="4dip"
        android:background="@color/purple_background"
        android:textColor="#ffffff"        
        android:text="@string/done_joining_button" 
        android:paddingLeft="8dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        android:paddingRight="8dip"
        >
    </Button>

</LinearLayout>